Fix yes/no/na alignment issues in chrome

--- a/style.css
+++ b/style.css
@@ -312,3 +312,7 @@ h1, h2, h3, h4 {
   text-align: right;
   padding-right: 8px;
 }
+
+.row {
+  clear: both;
+}
